--- a/style.css
+++ b/style.css
@@ -204,6 +204,12 @@ aspect-ratio: 1 / 1;
 #equalsButton {
     flex-basis: calc(100% / 0.727);
     font-size:4.993rem;
+    border-radius: 0.384rem;
+border: 2px solid rgba(27, 27, 26, 0.459);
+background-color: rgba(236, 236, 235, 0.959);
+color: rgba(54, 54, 53, 0.938);
+font-weight: 700;
+font-family: Roboto;
 }
 
 .op {
