disregard previous, this one is corect

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 h3 {
-    font-size: var(--dRe);
+    font-size: var(--dRem);
     text-align: left;
    /*  position: relative; */
     top: -43px;
