--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ h1 {
     font-size: var(--uRem);
     font-family: monospace;
     font-weight: 500;
-    filter: blur(0.22px);
+    filter: blur(1px);
 }
 
 
@@ -124,7 +124,7 @@ h1 {
     padding: var(--ddddRem);
     border-radius:var(--dddRem);
     border: 1px solid rgba(214, 211, 211, 0.705);
-    filter: blur(0.3px);  
+    filter: blur(1%);  
 }
 
 .sPad {
@@ -144,6 +144,7 @@ background-color: rgba(236, 236, 235, 0.959);
 color: rgba(54, 54, 53, 0.938);
 font-weight: 700;
 font-family: Roboto;
+
 }
 
 .keypad .pad {
